<resources>
    <string name="app_name">FirstSignUp</string>
    <string name="projectTitle">Welcome</string>
    <string name="mainButtonLogin">Login</string>
    <string name="mainButtonSignUp">Sign Up</string>
    <string name="signUpUsername">Username</string>
    <string name="signUpFirstName">First Name</string>
    <string name="signUpLastName">Last Name</string>
    <string name="signUpEmail">Email</string>
    <string name="signUpPassword">Password</string>
    <string name="hotspotIp">http://192.168.29.217:8000/</string>
    <string name="logout">Log Out</string>
    <string name="SignUpPhone">Mobile Number</string>
    <string name="getOtp">Get OTP</string>
    <string name="enterOtp">Enter OTP</string>
    <string name="newPassword">New Password</string>
    <string name="changePassword">Change Password</string>
    <string name="forgetPass">Forget Password?</string>
</resources>